[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["embedded", "asynchronous"]
description = "a global task spawner, run in `no_std`."
documentation = "https://docs.rs/task-stream"
edition = "2018"
homepage = "https://blog.crise.cn"
keywords = ["task", "stream", "spawn"]
license-file = "LICENSE"
name = "task-stream"
readme = "./README.md"
repository = "https://github.com/rise0chen/task-stream.git"
version = "0.3.3"

[dependencies]
async-task = {version = "4.0.3", default-features = false}
futures-core = {version = "0.3.13", default-features = false}
futures-intrusive = {version = "0.4.0", default-features = false}
heapless = {version = "^0.7.3"}
spin = {version = "0.9"}

[dev-dependencies]
async-std = {version = "1.7", features = ["unstable"]}
chrono = "0.4"
