[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["embedded", "asynchronous"]
description = "a global task spawner, run in `no_std`."
documentation = "https://docs.rs/task-stream"
edition = "2018"
homepage = "https://blog.crise.cn"
keywords = ["task", "stream", "spawn"]
license-file = "LICENSE"
name = "task-stream"
readme = "./README.md"
repository = "https://github.com/rise0chen/task-stream.git"
version = "0.3.5"

[dependencies]
ach-mpmc = "0.1"
async-task = {version = "4.1", default-features = false}
futures-util = {version = "0.3", default-features = false}

[dev-dependencies]
async-tick = "0.1"
chrono = "0.4"
futures-executor = {version = "0.3", features = ["thread-pool"]}
